# simcoe.ai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  catalog_sample.csv  config.electrician.yaml  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  topics.yaml
agents/: estimate-reviewer.md
claude_references/claw-code-main/rust/crates/compat-harness/: Cargo.toml
claude_references/claw-code-main/rust/crates/compat-harness/src/: lib.rs
claude_references/claw-code-main/rust/crates/runtime/: Cargo.toml
claude_references/claw-code-main/rust/crates/runtime/src/: bash.rs  bootstrap.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  lib.rs  managed_sessions.rs  mcp.rs  mcp_client.rs  mcp_stdio.rs  oauth.rs  prompt.rs  remote.rs  usage.rs  workspace.rs
copilot_context/: README.md  instructkr-claude-code
evals/: golden_electrician.jsonl  golden_electrician.manifest.json  golden_electrician_spec.json  results.json  results_electrician.json
prompts/: README.md  system_prompt_templates.yaml
scripts/: agent_command_registry.py  agent_registry.py  agent_shell.py  agent_skill_registry.py  agent_task_manager.py  agent_tool_registry.py  build_catalog_data.py  build_estimate_index.py  build_golden_benchmark.py  build_retrieval_corpus.py  build_source_registry.py  check_env.py  config_validation.py  context_providers.py  data_contracts.py  deterministic_tool_utils.py  estimate_lookup.py  evaluate.py  export.py  extract_reference_pdf.py  generate_data.py  hook_runtime.py  import_staged_reference_batch.py  (+24 more)
(+26781 files in other folders)
